--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
             <div class="bar"></div>
         </a>
     </div>
-    <div id="popovers"></div>
+    <div id="popovers" style="position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; overflow: hidden;"></div>
     <div class="belownav" onclick="state.collapse_nav();">
     </div>
     <!-- <div fixed id="iframeDiv"
