--- a/www/index.html
+++ b/www/index.html
@@ -598,7 +598,7 @@
             var x = document.getElementById("menu");
             x.className = "topnav";
         }
-        GlobalState.prototype.show_page = function (page = pages.HOME, message = null, subtext = null, opt_out = true, completion_callback = function (popover) {$(popover.page).remove();}) {
+        GlobalState.prototype.show_page = function (page = pages.HOME, message = null, subtext = null, opt_out = true, completion_callback = function (popover) {$("#"+popover.page).remove();}) {
             this.collapse_nav();
             console.log("SHOWING PAGE: " + page);
 
