--- a/www/index.html
+++ b/www/index.html
@@ -256,9 +256,7 @@
                 this.show_page(pages.PROCESSING, proto.message, proto.details);
             }
             else if (proto.type == Message.Type.HALT) {
-                this.show_page(pages.PROCESSING, proto.message, proto.details, false, function (popover) {
-                    $(popover.page).remove();
-                }.bind(this));
+                this.show_page(pages.PROCESSING, proto.message, proto.details, false);
             }
             else if (proto.type == Message.Type.PROGRESS) {
                 this.show_page(pages.PROCESSING, proto.message, proto.details);
@@ -266,7 +264,7 @@
             else if (proto.type == Message.Type.DELETE_ACCOUNT) {
                 this.show_page(pages.PROCESSING, proto.message, proto.details, true, function (popover) {
                     this.websocket.close();
-                    $(popover.page).remove();
+                    $("#"+popover.page).remove();
                 }.bind(this));
             }
             else if (proto.type == Message.Type.DELETE_ALGORITHM) {
