--- a/www/index.html
+++ b/www/index.html
@@ -763,7 +763,7 @@
             {
                 if(this.popovers[i].page == page)
                 {
-                    this.popover_callback(this.popovers[i]);
+                    this.popovers[i].popover_callback(this.popovers[i]);
                 }
             }
         }
