--- a/www/index.html
+++ b/www/index.html
@@ -776,7 +776,7 @@
                     element = $("#"+this.popovers[i].page);
                     element.animate({
                         height: "hide",
-                        top: "+=50"
+                        top: "-100%"
                     }, 1000, function() {
                         element.remove();
                     });
