--- a/www/index.html
+++ b/www/index.html
@@ -758,7 +758,7 @@
         }
 
         GlobalState.prototype.popover_callback = function (identifier_index) {
-            var page = "#popover"+identifier_index;
+            var page = "popover"+identifier_index;
             for(var i = 0; i < this.popovers.length; i++)
             {
                 if(this.popovers[i].page == page)
