--- a/www/index.html
+++ b/www/index.html
@@ -390,11 +390,38 @@
                     break;
                 case pages.RESET:
                     this.refresh_captchas();
+
+                    $("#home_button").removeClass("active")
+                    $("#browse_button").removeClass("active")
+                    $("#edit_button").removeClass("active")
+                    $("#create_button").removeClass("active")
+                    $("#profile_button").removeClass("active")
+                    $("#login_button").removeClass("active")
+                    $("#signup_button").removeClass("active")
+                    $("#logout_button").removeClass("active")
                     break;
                 case pages.POLICY:
+
+                    $("#home_button").removeClass("active")
+                    $("#browse_button").removeClass("active")
+                    $("#edit_button").removeClass("active")
+                    $("#create_button").removeClass("active")
+                    $("#profile_button").removeClass("active")
+                    $("#login_button").removeClass("active")
+                    $("#signup_button").removeClass("active")
+                    $("#logout_button").removeClass("active")
                     break;
                 case pages.REQUEST:
                     this.refresh_captchas();
+
+                    $("#home_button").removeClass("active")
+                    $("#browse_button").removeClass("active")
+                    $("#edit_button").removeClass("active")
+                    $("#create_button").removeClass("active")
+                    $("#profile_button").removeClass("active")
+                    $("#login_button").removeClass("active")
+                    $("#signup_button").removeClass("active")
+                    $("#logout_button").removeClass("active")
                     break;
                 case pages.HOME:
                     $("#menu").fadeIn(1000);
