--- a/www/index.html
+++ b/www/index.html
@@ -262,6 +262,7 @@
                 this.show_page(pages.PROCESSING, proto.message, proto.details);
             }
             else if (proto.type == Message.Type.DELETE_ACCOUNT) {
+                this.hide_popovers();
                 this.show_page(pages.PROCESSING, proto.message, proto.details, true, function (popover) {
                     this.websocket.close();
                     this.hide_popover(popover);
