--- a/www/index.html
+++ b/www/index.html
@@ -647,8 +647,8 @@
                         '                '+subtext+'\n' +
                         '            </label>\n' +
                         '            <br>\n' +
-                        '            <br>\n' +
-                        (opt_out ? ' <div style="text-align: center;">\n' +
+                        (opt_out ? ' <br>\n' +
+                        '            <div style="text-align: center;">\n' +
                         '                <button type="button" class="opt_out btn btn-outline-success mx-auto" style="display: none;"\n' +
                         '                    onclick="state.popover_callback('+this.popover_counter+')">OK</button>\n' +
                         '            </div>\n' : "" )+
@@ -693,8 +693,8 @@
                         '            <br>\n' +
                         '            <label id="popover_message'+this.popover_counter+'" style="font-size: 14px !important;color: #fff;">'+subtext+'</label>\n' +
                         '            <br>\n' +
-                        '            <br>\n' +
-                        (opt_out ? ' <div style="text-align: center;">\n' +
+                        (opt_out ? ' <br>\n' +
+                        '            <div style="text-align: center;">\n' +
                         '                <button type="button" class="btn btn-outline-danger mx-auto"\n' +
                         '                    onclick="state.popover_callback('+this.popover_counter+')">OK</button>\n' +
                         '            </div>\n' : "" )+
@@ -738,8 +738,8 @@
                         '            <br>\n' +
                         '            <label id="popover_message" style="font-size: 14px !important;color: #fff;">'+subtext+'</label>\n' +
                         '            <br>\n' +
-                        '            <br>\n' +
-                        (opt_out ? ' <div style="text-align: center;">\n' +
+                        (opt_out ? ' <br>\n' +
+                        '            <div style="text-align: center;">\n' +
                         '                <button type="button" class="btn btn-outline-danger mx-auto"\n' +
                         '                    onclick="state.popover_callback('+this.popover_counter+')">OK</button>\n' +
                         '            </div>\n' : "" )+
