--- a/www/index.html
+++ b/www/index.html
@@ -626,8 +626,7 @@
             console.log("SHOWING PAGE: " + page);
 
             if (page == pages.PROCESSING) {
-                if(!opt_out)
-                    this.hide_popovers();
+                this.hide_popovers();
                 $(function () {
                     page = 'popover'+this.popover_counter;
                     html = 
@@ -676,8 +675,7 @@
                 }.bind(this));
             }
             else if (page == pages.CLIENT_ERROR) {
-                if(!opt_out)
-                    this.hide_popovers();
+                this.hide_popovers();
                 $(function () {
                     page = 'popover'+this.popover_counter;
                     html =
@@ -724,8 +722,7 @@
                 }.bind(this));
             }
             else if (page == pages.SERVER_ERROR) {
-                if(!opt_out)
-                    this.hide_popovers();
+                this.hide_popovers();
                 $(function () {
                     page = 'popover'+this.popover_counter;
                     html =
@@ -812,6 +809,8 @@
                     this.popovers.splice(i, 1)
                     i--;
                 }
+                else
+                    break;
             }
         }
 
