--- a/www/index.html
+++ b/www/index.html
@@ -650,7 +650,7 @@
                         '            <br>\n' +
                         (opt_out ? ' <br>\n' +
                         '            <div style="text-align: center;">\n' +
-                        '                <button type="button" class="opt_out btn btn-outline-success mx-auto" style="display: none;"\n' +
+                        '                <button type="button" class="opt_out btn btn-outline-success mx-auto"\n' +
                         '                    onclick="state.popover_callback('+this.popover_counter+')">OK</button>\n' +
                         '            </div>\n' : "" )+
                         '        </h1>\n' +
