--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id="menu" class="topnav" style="display:hidden;">
+    <div id="menu" class="topnav" style="display:none;">
         <a id="home_button" href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
         <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
