--- a/www/index.html
+++ b/www/index.html
@@ -508,7 +508,7 @@
                     break;
                 case pages.SIGNUP:
                     this.refresh_captchas();
-                    $("#menu").fadein(1000);
+                    $("#menu").fadeIn(1000);
 
                     $("#home_button").removeClass("active")
                     $("#browse_button").removeClass("active")
@@ -521,7 +521,7 @@
                     break;
                 case pages.LOGOUT:
                     this.refresh_captchas();
-                    $("#menu").fadein(1000);
+                    $("#menu").fadeIn(1000);
 
                     $("#home_button").removeClass("active")
                     $("#browse_button").removeClass("active")
