--- a/www/index.html
+++ b/www/index.html
@@ -247,7 +247,7 @@
                 this.hash = proto.auth.hash;
             }
             else if (proto.type == Message.Type.SET_PASSWORD) {
-                this.show_page(pages.PROCESSING, proto.message, proto.details);
+                this.hide_popovers();
             }
             else if (proto.type == Message.Type.HALT) {
                 this.show_page(pages.PROCESSING, proto.message, proto.details, false);
