--- a/www/index.html
+++ b/www/index.html
@@ -858,6 +858,7 @@
                         this.refresh_content(window.location.hash);
                     }.bind(this));
                     this.change_title(window.location.hash)
+                    this.refresh_content(window.location.hash);
                 }.bind(this))
             }.bind(this))
         }
